--- a/front/package.json
+++ b/front/package.json
@@ -9,15 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.9",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.0.25",
+    "morgan": "^1.10.0",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
-    "@material-tailwind/react": "^2.1.9",
-    "dotenv": "^16.4.5",
-    "morgan": "^1.10.0",
     "react-slick": "^0.30.2",
+    "resend": "^3.2.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
