--- a/front/package.json
+++ b/front/package.json
@@ -18,7 +18,9 @@
     "dotenv": "^16.4.5",
     "morgan": "^1.10.0",
     "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "react-hook-form": "^7.51.3",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
