--- a/front/package.json
+++ b/front/package.json
@@ -9,14 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@material-tailwind/react": "^2.1.9",
-    "dotenv": "^16.4.5",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@material-tailwind/react": "^2.1.9",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@mui/x-date-pickers": "^7.1.1",
+    "axios": "^1.6.8",
     "dayjs": "^1.11.10",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.0.25",
@@ -24,12 +23,12 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.3",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-slick": "^0.30.2",
     "resend": "^3.2.0",
-    "slick-carousel": "^1.8.1",
-    "react-hook-form": "^7.51.3",
-    "react-hot-toast": "^2.4.1"
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
